more edits to pres predict numbers

--- a/APSA_2012/Paper/Bibliography_EBMA.bib
+++ b/APSA_2012/Paper/Bibliography_EBMA.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Florian Hollenbach at 2013-01-27 21:59:37 -0500 
+%% Created for Florian Hollenbach at 2013-01-29 11:25:08 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Holbrook:1996,
+	Author = {Holbrook, Thomas M.},
+	Date-Added = {2013-01-29 16:24:10 +0000},
+	Date-Modified = {2013-01-29 16:25:08 +0000},
+	Journal = {American Politics Research},
+	Number = {4},
+	Pages = {506--519},
+	Title = {Reading the Political Tea Leaves : {A} Forecasting Model of Contemporary Presidential Elections},
+	Volume = {24},
+	Year = {1996}}
 
 @unpublished{Fair:2012,
 	Author = {Fair, Ray C.},
@@ -34,7 +45,7 @@
 	Journal = {PS: Political Science \& Politics},
 	Number = {4},
 	Pages = {733 - 735},
-	Title = {Introduction---The 2004 Presidential Election Forecasts },
+	Title = {Introduction---The 2004 Presidential Election Forecasts},
 	Volume = {37},
 	Year = {2004}}
 
@@ -93,7 +104,7 @@
 	Year = {1992}}
 
 @article{EriksonWlezien:1996,
-	Author = {Wlezien, Christopher and Erikson, Robert S. },
+	Author = {Wlezien, Christopher and Erikson, Robert S.},
 	Date-Added = {2013-01-28 00:58:12 +0000},
 	Date-Modified = {2013-01-28 00:59:08 +0000},
 	Journal = {American Politics Research},
